Modify problem name

--- a/week03/3주차_문제목록.md
+++ b/week03/3주차_문제목록.md
@@ -1,7 +1,7 @@
 ## 문제 목록
 
-| **순번** | **문제 번호** | **문제 제목 (링크)**                                         |
-| -------- |-----------|--------------------------------------------------------|
-| 1        | 2578       | [빙고](https://www.acmicpc.net/problem/2578)              |
-| 2        | 20055     | [컨베이어 벨트 위의 로봇](https://www.acmicpc.net/problem/20055) |
-| 3        | 14284     | [걷기](https://www.acmicpc.net/problem/14284)            |
+| **순번** | **문제 번호** | **문제 제목 (링크)**                                             |
+| -------- | ------------- | ---------------------------------------------------------------- |
+| 1        | 2578          | [빙고](https://www.acmicpc.net/problem/2578)                     |
+| 2        | 20055         | [컨베이어 벨트 위의 로봇](https://www.acmicpc.net/problem/20055) |
+| 3        | 14284         | [간선 이어가기 2](https://www.acmicpc.net/problem/14284)         |
